<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:layoutDirection="rtl"
    android:textDirection="rtl"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intro"
                android:gravity="center"
                android:id="@+id/txtHeader"
                android:textSize="@dimen/size_small"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/disability"
                android:id="@+id/switchDisability"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:id="@+id/lbl1"
                android:visibility="gone"
                app:errorContentDescription="@string/fill_Field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                >

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/txtDisabilityType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableEnd="@android:drawable/arrow_down_float"
                    android:drawableRight="@android:drawable/ic_menu_agenda"
                    android:hint="@string/type"
                     android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>
            <Spinner
                android:id="@+id/spnrDisabilityType"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:spinnerMode="dropdown"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:endIconMode="clear_text"
                android:id="@+id/lbl2"
                android:visibility="gone"
                app:errorContentDescription="@string/fill_Field"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtOther"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/other"
                    android:inputType="text"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="90dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        app:icon="@drawable/next"
        app:iconTint="#FFFFFF"
        android:text="@string/next"
        android:textColor="@color/white"

        android:tint="@color/white"
        app:backgroundTint="@color/purple_700"
        app:elevation="3dp"
        app:fabSize="normal"
        app:tint="@color/white" />
</RelativeLayout>